# TaskManagerWannaBe

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
include/: imgui.ini
src/: main.cpp
